# sicb

./: LICENSE  Makefile.in  README  README.COLOR  README.GEEKLAB  README.md  TESTED_UNDER  cicbrc.sample  config.h.in  configure  configure.in  icbserverdb  protocol.h  sample.icbrc  setup  site.mk  testIcbCrypt.pl  version.h.in
IcbCrypt/: Changes  IcbCrypt.pm  IcbCrypt.xs  MANIFEST  Makefile.PL  test.pl
conf/: aix.mk  posix.mk  svr4.mk
contrib/: README  echofile
debian/: README  README.Debian  README.source  changelog  control  copyright  docs
docs/: README  tcl.man
glob/: glob.c  icbmatch.c  icbmatch.h  tilde.c
icb/: Makefile  Makefile.in  bindings  c_hclear.c  c_hdel.c  c_help.c  c_hush.c  c_log.c  c_quit.c  c_rand.c  c_replay.c  c_shell.c  c_time.c  c_usage.c  c_version.c  cicbrc.sample  color.c  color.h  colortest.c  custom.c  cute.c  defprocs.c  dispatch.c  externs.h  getline.c  getswitch.c  getswitch.h  globals.c  helpdata.c  history.c  icb.h  icbcrypt.c  icbcrypt.h  ipcf.c  main.c  msgs.c  on  oset.c  parse.c  print.c  (+28 more)
icb/help/: groups  hush  input  intro  news  options  primitives  rules  striptabs  tcl  variables
malloc/: alloca.c  xalloca.c
murgil/: Makefile  Makefile.in  README  clientserve.c  config.h  contoport.c  discuser.c  externs.h  getaddr.c  getrname.c  globals.c  ignore.c  ipcf.h  makeport.c  newconnect.c  packetsend.c  readpacket.c  select.h  sendpacket.c  serverserve.c  setdelay.c
readline/doc/: Makefile  Makefile.in
support/: ask.c  fixprotos.pl  hasfunc
tcl/: Makefile  Makefile.in  README  gen  list.h  panic.c  sprite.h  strchr.c  strerror.c  string.h  strpbrk.c  strspn.c  strstr.c  strtol.c  strtoul.c  tcl.h  tclAssem.c  tclBasic.c  tclCmdAH.c  tclCmdIZ.c  tclExpr.c  tclGlob.c  tclHistory.c  tclInt.h  tclProc.c  tclUtil.c
