dnl Process this file with autoconf to produce a configure script.
AC_INIT(icb/s_open.c)
AC_CONFIG_HEADER(config.h)

GICBVERS="1.5.2"

DEFAULTSERVER="default.icb.net"
DEFAULTSERVERLIST="$libdir/icbserverdb"
DEFAULTPORT="7326"
DEFAULTSYSTEMCICBRC="$libdir/cicbrc"

AC_ARG_WITH(PORT, 
[ --with-defport=PORT      default port to connect to, default is $DEFAULTPORT ],
[ ICBPORT=$withval ],
[ ICBPORT=$DEFAULTPORT ]
)
AC_SUBST(ICBPORT)

AC_ARG_WITH(ICBSERVER, 
[ --with-defserver=SERVER  default port to connect to, default is icb.evolve.com ],
[ ICBSERVER=$withval ],
[ ICBSERVER=$DEFAULTSERVER ]
)
AC_SUBST(ICBSERVER)

AC_ARG_WITH(ICBSERVERLIST, 
[ --with-serverlist=PATH   path to server list, default is $DEFAULTSERVERLIST ],
[ ICBSERVERLIST=$withval ],
[ ICBSERVERLIST=$DEFAULTSERVERLIST ]
)
AC_SUBST(ICBSERVERLIST)

AC_ARG_WITH(ICBSYSTEMCICBRC, 
[ --with-systemcicbrc=PATH path to system cicbrc, default is /usr/local/lib/cicbrc ],
[ ICBSYSTEMCICBRC=$withval ],
[ ICBSYSTEMCICBRC=$DEFAULTSYSTEMCICBRC ]
)
AC_SUBST(ICBSYSTEMCICBRC)

dnl Checks for programs.
AC_PROG_GCC_TRADITIONAL
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AC_CONFIG_AUX_DIR(./support)

AC_CANONICAL_HOST

AC_RETSIGTYPE

AC_HEADER_STAT
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_HEADER_TIME

AC_FUNC_ALLOCA
AC_FUNC_FNMATCH
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL
AC_FUNC_STRCOLL
AC_FUNC_VFORK
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(strchr strtoul getcwd gettimeofday getwd putenv select socket strcspn strerror strspn strstr strtod strtol strtoul strcasecmp strncasecmp)
AC_CHECK_HEADERS(fcntl.h sgtty.h termio.h strings.h bsd/sgtty.h sys/sys/file.h sys/ioctl.h sys/time.h termio.h unistd.h)
AC_CHECK_HEADERS(readline.h readline/readline.h openssl/evp.h evp.h tcl.h tcl8.0/tcl.h tcl8.1/tcl.h tcl8.2/tcl.h)

AC_C_CONST
AC_TYPE_SIZE_T
AC_STRUCT_TM

AC_CHECK_FUNCS(lrand48)
AC_CHECK_LIB(termcap,main)
AC_CHECK_LIB(socket,main)
AC_CHECK_LIB(nsl,main)
AC_CHECK_LIB(crypto,main)
AC_CHECK_LIB(tcl8.0,Tcl_Eval,,AC_CHECK_LIB(tcl8.1,Tcl_Eval,,AC_CHECK_LIB(tcl8.2,Tcl_Eval,,AC_MSG_ERROR(Couldn't find tcl 8.0, 8.1, or 8.2. We need it. Get it.))))
AC_CHECK_LIB(readline,main)

dnl puke
case "$host_os" in
solaris*)	SOLARIS_UCBLIB="-L/usr/ucblib -lucb" ;;
esac


AC_SUBST(SOLARIS_UCBLIB)
AC_SUBST(GICBVERS)

AC_CONFIG_SUBDIRS(murgil icb)

AC_OUTPUT(icb/Makefile murgil/Makefile Makefile version.h)
